--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@google/generative-ai": "^0.16.0",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
+    "axios": "^1.7.3",
     "next": "14.2.5",
     "openai": "^4.55.4",
     "react": "^18",
